Display: Add styles for input number #6862

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -41,6 +41,7 @@
 @include meta.load-css("atoms/inputgroup");
 @include meta.load-css("atoms/input_switch");
 @include meta.load-css("atoms/input_text");
+@include meta.load-css("atoms/input_number");
 @include meta.load-css("atoms/messages");
 @include meta.load-css("atoms/multiselect");
 @include meta.load-css("atoms/overlay");
