--- a/src/CoreBundle/Resources/views/Admin/Settings/search.html.twig
+++ b/src/CoreBundle/Resources/views/Admin/Settings/search.html.twig
@@ -79,9 +79,27 @@
                                                 </div>
 
                                                 <div class="mb-2">
-                                                    {{ form_widget(field, { attr: {
-                                                        class: 'w-full max-w-none rounded border border-gray-25 focus:border-primary focus:ring focus:ring-primary/30 transition'
-                                                    } }) }}
+                                                    {% set verticalChoiceFields = ['active_tools_on_create', 'course_hide_tools'] %}
+
+                                                    {# only for ChoiceType + expanded + multiple #}
+                                                    {% set isChoice   = 'choice' in field.vars.block_prefixes %}
+                                                    {% set isExpanded = isChoice and (field.vars.expanded is defined and field.vars.expanded) %}
+                                                    {% set isMultiple = isChoice and (field.vars.multiple is defined and field.vars.multiple) %}
+
+                                                    {% if (field.vars.name in verticalChoiceFields) and isExpanded and isMultiple %}
+                                                        <div class="flex flex-col gap-2">
+                                                            {% for child in field %}
+                                                                <label class="inline-flex items-center gap-2">
+                                                                    {{ form_widget(child) }}
+                                                                    <span>{{ child.vars.label }}</span>
+                                                                </label>
+                                                            {% endfor %}
+                                                        </div>
+                                                    {% else %}
+                                                        {{ form_widget(field, { attr: {
+                                                            class: 'w-full max-w-none rounded border border-gray-25 focus:border-primary focus:ring focus:ring-primary/30 transition'
+                                                        } }) }}
+                                                    {% endif %}
                                                 </div>
 
                                                 {% if field.vars.help is not empty %}
@@ -95,6 +113,7 @@
 
                                     {{ form_rest(form) }}
 
+                                    <hr class="my-10 border-gray-25" />
                                     <div class="mt-4 mb-10">
                                         {{ update() }}
                                     </div>
